--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "expo": "~44.0.0",
     "expo-font": "^10.2.1",
     "expo-status-bar": "~1.2.0",
+    "link": "^1.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-native": "^0.64.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-reanimated": "^1.13.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.17.1",
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
